<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/login_bg_design" />


    <!--background image-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.05" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.05"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.05"
                    android:src="@drawable/logo_img" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3.20" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.15" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.70" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.70" />

    </LinearLayout>


    <!--Buttons View -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.50"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/email_ic"
                    android:gravity="right"
                    android:padding="@dimen/size_10_dp"
                    android:hint="@string/email_text"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textDirection="rtl"
                    android:textSize="@dimen/size_16_sp">


                </android.support.design.widget.TextInputEditText>


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/key_ic"
                    android:gravity="right"
                    android:padding="@dimen/size_10_dp"
                    android:hint="@string/password_text"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textDirection="rtl"
                    android:textSize="@dimen/size_16_sp">


                </android.support.design.widget.TextInputEditText>


                <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="45dp"-->
                <!--android:layout_marginTop="18dp"-->
                <!--android:orientation="horizontal">-->

                <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="3" />-->

                <ImageView
                android:id="@+id/login_btn_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/login_btn"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"/>

                <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="3" />-->


                <!--</LinearLayout>-->




                <TextView
                    android:id="@+id/register_now_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="5dp"
                    android:background="@drawable/allselector"
                    android:text="@string/register_now" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4" />


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>